--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "loopback-connector": "^6.1.9",
     "minimatch": "^10.0.1",
     "nanoid": "^3.3.7",
+    "neotraverse": "^0.6.18",
     "qs": "^6.13.0",
     "strong-globalize": "^6.0.6",
-    "traverse": "^0.6.10",
     "uuid": "^10.0.0"
   },
   "license": "MIT"
