--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "loopback-connector": "^6.2.4",
     "minimatch": "^10.0.1",
     "nanoid": "^3.3.11",
+    "neoqs": "^6.13.0",
     "neotraverse": "^0.6.18",
-    "qs": "^6.14.0",
     "strong-globalize": "^6.0.6",
     "uuid": "^11.1.0"
   },
