--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "Juggler",
     "ORM"
   ],
-  "author": "IBM Corp.",
+  "author": "IBM Corp. and LoopBack contributors",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "repository": {
     "type": "git",
